<resources>
    <string name="app_name">Wan Android</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="knowledge_hierarchy">知识体系</string>
    <string name="wx_article">公众号</string>
    <string name="home_pager">首页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="login">登录</string>
    <string name="login_account_hint">用户名</string>
    <string name="login_psw_hint">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="account_password_null_tint">用户名或账号不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="ok">确认</string>
    <string name="no">取消</string>
    <string name="logout_tint">退出登录</string>
    <string name="main_title">主页</string>
    <string name="login_first">请先登录！</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="double_click_exit_tint">再按一次后退键退出</string>
    <string name="query_logout">确认退出登录</string>
    <string name="search_hint">搜索</string>
    <string name="empty_data">空空如也</string>
    <string name="text_refresh">刷 新 一 下</string>
    <string name="change_search_txt">换一换</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="clear">清空</string>
    <string name="PARSE_ERROR">解析错误</string>
    <string name="UNKNOWN">未知错误</string>
    <string name="NETWORK_ERROR">网络错误</string>
    <string name="HTTP_ERROR">协议错误</string>
    <string name="essay_top">置顶</string>
    <string name="unlogin">未登录</string>
    <string name="login_text">点我登录</string>
    <string name="unlogin_text">还没有登录，请先登录..</string>
    <string name="retry">重试</string>
    <string name="browser">浏览器打开</string>
    <string name="share">分享</string>
    <string name="cancel_collectin">取消收藏</string>
    <string name="LOGIN_ERROR">登录失败</string>
    <string name="share_type_url">%1$sShare【%2$s】special top：%3$s</string>
    <string name="share_choose">选择要分享的方式</string>
    <string name="get_writepermission_deny">获取写入权限失败</string>
    <string name="third_login">第三方登录</string>
    <string name="later">敬请期待</string>
    <string name="no_account">还没有账号？</string>
    <string name="to_register">去注册</string>
    <string name="login_confirm_psw_hint">确认密码</string>
    <string name="register_seccuss">注册成功</string>
    <string name="model_noimg">无图模式</string>
    <string name="model_noimg_subtitle">开启后在非Wifi环境下不加载图片</string>
    <string name="show_hottop">是否显示首页置顶文章</string>
    <string name="show_hottop_subtitle">开启后将不会显示首页置顶文章</string>
    <string name="setting_basic">基本设置</string>
</resources>
