<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/dp_32"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_32"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_64"
        android:padding="10dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_user"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_18"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/login_account_hint"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_20"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_8"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="10dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_psw"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_18"
            android:lines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/login_psw_hint"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_20"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_8"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginRight="@dimen/dp_48"
            android:background="@drawable/btn_login_bg"
            android:text="@string/text_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="或"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginRight="@dimen/dp_48"
            android:background="@drawable/btn_register_bg"
            android:text="@string/text_register"/>

    </LinearLayout>





</LinearLayout>